# gloriousleader

./: .gitignore  CMakeLists.txt  DESIGN  README  TODO  Toolchain-mingw32.cmake  ati.supp  glorious  image.c  level.c  list.c  list.h  main.c  monster.c  player.c  prototype.py  sprite.c  sprite.h  survivor.h
src/: camera.c  camera.h  image.h  level.c  level.h  list.c  main.c  monster.h  player.h  survivor.c
